# grpc_helloworlds

./: README.md  docker-compose.yaml
go_proto/: Dockerfile  README.md  go.mod  main.go
go_proto/greeter/: greeter.pb.go  greeter_grpc.pb.go
proto/: greeter.proto
rust_proto/: Cargo.toml  Dockerfile  build.rs
rust_proto/src/: main.rs
