[package]
name = "rust_proto"
version = "0.1.0"
edition = "2021"

[features]
dockerproto = []

[dependencies]
argh = "0.1"
axum = "0.7.5"
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "tokio-macros"] }
tonic = { version = "0.12.2", features = ["tls", "gzip"] }
tonic-web = "0.12.2"
tonic-reflection = "0.12.2"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = "0.12.2"
